Fixed numbering bug and cleaned up code.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Kyle Amoroso" />
         <meta name="description" content="The original Minesweeper recreated in HTML5." />
 		<meta name="keywords" content="minesweeper,game,html5" />
-        <meta name="version" content="1.0" />
+        <meta name="version" content="1.1.1" />
         <meta property="og:title" content="Minesweeper" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://pitt.edu/~ksa18/minesweeper/" />
@@ -75,7 +75,7 @@
 		<div class="dialog-container" id="about-dialog">
 			<div class="dialog">
 				<header class="dialog-header">
-					<span class="dialog-title">About</span>
+					<span class="dialog-title">Minesweeper v1.1.1</span>
 					<span class="dialog-hide-x" data-dialog-hide="about-dialog">&times;</span>
 				</header>
 				<div class="dialog-body">Created for the Chrome Web Store by Kyle Amoroso in 2015.</div>
