Standardized the description.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <!-- SEO -->
         <meta name="application-name" content="Minesweeper" />
         <meta name="author" content="Kyle Amoroso" />
-        <meta name="description" content="The original Minesweeper recreated in HTML5." />
+        <meta name="description" content="The original Minesweeper recreated as a Chrome App." />
 		<meta name="keywords" content="minesweeper,game,html5" />
         <meta name="version" content="1.1.1" />
         <meta property="og:title" content="Minesweeper" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://pitt.edu/~ksa18/minesweeper/" />
         <meta property="og:image" content="http://pitt.edu/~ksa18/minesweeper/splash.png" />
-        <meta property="og:description" content="The original Minesweeper recreated in HTML5 as a Chrome App." />
+        <meta property="og:description" content="The original Minesweeper recreated as a Chrome App." />
 		<!-- Favicons -->
         <link rel="icon" type="image/png" href="icons/favicon-96.png" />
 		<!-- Custom -->
